syntax = "proto3";

option csharp_namespace = "CarAdService";

package carad;

// The car ad service definition.
service CarAd {
  // Update a car ad
  rpc UpdateCarAd (UpdateCarAdRequest) returns (UpdateCarAdReply);
}

// The request message containing the car ad details.
message UpdateCarAdRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  double price = 4;
}

// The response message confirming the update.
message UpdateCarAdReply {
  string message = 1;
}
